kubernetes-edge-poc/edge-demo-k8sconfig/edge-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-demo-deployment
spec:
  selector:
    matchLabels:
      app: edge-demo-app
  replicas: 3 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: edge-demo-app
    spec:
      containers:
      - name: edge-demo-app
        image: us.gcr.io/pa-rrajaram/edge-demo:latest
        ports:
        - containerPort: 8080
          name: server
        - containerPort: 8081
          name: management
