kubernetes-edge-poc/edge-demo-k8sconfig/edge-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-boot-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
spec:
  backend:
    serviceName: spring-boot-service
    servicePort: 8080
